--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Python version of The Binary Authorship Attribution Project
+
 Original repository: https://github.com/calaylin/bda
 
 For details see the paper: https://www.cs.drexel.edu/~greenie/caliskan-islam_when.pdf
